# rpg_open_remode

./: .gitignore  CMakeLists.txt  README.md  open_remode.rviz  package.xml
include/cuda_toolkit/: exception.h  helper_timer.h
include/rmd/: check_cuda_device.cuh  cuda_exception.cuh  denoise_device_data.cuh  depthmap.h  depthmap_denoiser.cuh  depthmap_node.h  device_data.cuh  device_image.cuh  helper_vector_types.cuh  image.cuh  matrix.cuh  mvs_device_data.cuh  padded_memory.cuh  pinhole_camera.cuh  publisher.h  reduction.cuh  se3.cuh  seed_matrix.cuh  texture_memory.cuh
launch/: bluefox_25001262.launch  dataset.launch  px4_2.launch
src/: check_cuda_device.cu  depthmap.cpp  depthmap_denoiser.cu  depthmap_node.cpp  epipolar_match.cu  main_ros.cpp  padded_memory.cu  publisher.cpp  reduction.cu  reduction_kernels.cu  seed_check.cu  seed_init.cu  seed_matrix.cu  seed_update.cu  triangulation.cu
src/test/: dataset_main.cpp
test/: copy.cu  copy.cuh  dataset.cpp  dataset.h  dataset_main.cpp  device_image_test.cpp  epipolar_test.cpp  main_test.cpp  publish_dataset.cpp  reduction_test.cpp  seed_matrix_test.cpp  sobel.cu  sobel.cuh  test_texture_memory.cuh
